# yourss

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  build_debug.sh
downloader/: .gitignore  Cargo.toml
downloader/src/: main.rs
feedbuilder/: Cargo.toml
feedbuilder/src/: main.rs
fileserver/: .gitignore  Cargo.toml
fileserver/src/: main.rs
fileserver/static/rss/: feed.xml
src/: main.rs
static/: index.html
static/js/: index.js
static/rss/: feed.xml
templates/: feed_template.xml  start_yourss.sh
webapp/: Cargo.toml
webapp/src/: main.rs
webapp/static/: index.html  index.js
