[package]
name = "yourss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3"
actix-files = "^0.3"
env_logger = "^0.8"
serde = "^1"
serde_json = "^1.0"
mp3-duration = "^0.1"
actix-cors = "^0.5.4"
